# lab_att

./: README.md  pyproject.toml
config/: settings.py  urls.py
config/core/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
config/core/migrations/: 0001_tools.py
config/core/static/css/: style.css
config/core/static/js/: bootstrap.bundle.js  bootstrap.esm.js  bootstrap.js  scripts.js
config/core/templates/core/: appointment_scan.html  appointment_voice.html  core.html
config/core/templates/registration/: login.html
contrib/: env-sample
